Немного изменил gui и отображаемую информацию

--- a/DeliveryGrig.Api/wwwroot/index.html
+++ b/DeliveryGrig.Api/wwwroot/index.html
@@ -35,9 +35,12 @@
         </tbody>
     </table>
 
-    <h3 class="center-aligh">Список отфильтрованных заказов:</h3>
+    <h3 class="center-aligh">
+        Список отфильтрованных заказов (в выбранный район города в ближайшие полчаса после указанного времени
+        первой доставки):
+    </h3>
     <div class="container-table-2">
-        <button id="clearOrdersBtn" style="background-color:greenyellow">Очистить данные</button>
+        <button id="clearOrdersBtn">Очистить данные</button>
         <table id="filteredTable" class="table">
             <thead><tr><th>Id</th><th>Вес</th><th>Район</th><th>Время доставки</th></tr></thead>
             <tbody class="tbody_filtered_orders">
