--- a/DeliveryGrig.Api/wwwroot/index.html
+++ b/DeliveryGrig.Api/wwwroot/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="title_header">Welcom To Amazing Delivery From Grig!</h1>
+    <h1 class="title_header">Welcome To Amazing Delivery From Grig!</h1>
     <hr />
     <h3 class="center-aligh">Параметры заказа:</h3>
     <div class="input-data center-aligh">
